<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="jp.ac.it_college.std.s14002.android.bluetoothmessenger.MainActivity">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#2196F3"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:id="@+id/nesting_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/input_text"
        android:layout_below="@+id/app_bar_layout"
        android:layout_marginBottom="48dp"
        android:orientation="horizontal">

        <!--<LinearLayout
            android:id="@+id/member_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
-->
        <TextView
            android:id="@+id/member_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#64B5F6"
            android:text="@string/tv_member" />

        <!--</LinearLayout>-->

        <!--<LinearLayout
            android:id="@+id/log_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">-->

        <TextView
            android:id="@+id/log_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="#90CAF9"
            android:text="@string/tv_log" />
        <!--</LinearLayout>-->

    </LinearLayout>


    <LinearLayout
        android:id="@+id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:layout_alignParentBottom="true"
        android:layout_below="@+id/member_view"
        android:background="#E3F2FD"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/please_input"
            android:textColorHighlight="#000" />
        <!--Buttonのレイアウトが崩れているかもしれない-->
        <Button
            android:id="@+id/bt_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="#1E88E5"
            android:text="@string/send"
            android:textColor="#fff" />


    </LinearLayout>


</RelativeLayout>
